--- a/app_admin/templates/students/list.html
+++ b/app_admin/templates/students/list.html
@@ -397,7 +397,7 @@
                         $(courses).each(function (index, item) {
 
                             if (index < 2) {
-                                var bd = '<span class="badge badge-secondary">' +
+                                var bd = '<span class="badge badge-secondary mr-2">' +
                                     courses[0]
                                     .title + '</span>';
                                 $(_that).append(bd);
